--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alvaro-garcia-sierra/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/AlvaroS11" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						
 					</ul>
 				</footer>
