--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/banners/FotoOrlaRed.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Álvaro García Sierra</a></h1>
-					<p>I'm a fourth year Computer Engineering + Videogames Development student at University Rey Juan Carlos, Madrid. <br /></p>
+					<p>Computer Engineering <br>&<br> Videogame Developer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -217,6 +217,19 @@
 													Random Forest algorithm and Bagging classifier.
 												</p>
 											</div>
+										</article>
+										<article>
+											<div >
+												<a href="https://github.com/AlvaroS11/SimulacionFisicaTelaYSolidoDeformable"><h4 style="text-align: center;">Wine Quality Prediction - Python - Artificial Intelligence</h4></a>
+												<p style="text-align: center;">For this project a big datasheet of different wines was analized and then used to obtain an Artificial Intelligence to decide the quality of
+													wines depending on this stats. On this project different models were used like Artificial Neural Network,Decision Trees, K Nearest Neighbour algorithm,
+													Random Forest algorithm and Bagging classifier.
+												</p>
+											</div>
+											<a href="https://github.com/AlvaroS11/SimulacionFisicaTelaYSolidoDeformable" class="image" style="width: 550; height: 550;"><img src="images/animTela.gif" alt="" /></a>
+											<a href="https://github.com/AlvaroS11/SimulacionFisicaTelaYSolidoDeformable" class="image" style="width: 550; height: 550;"><img src="images/animSol.gif" alt="" /></a>
+											
+											
 										</article>
 									</div>
 								</div>
