--- a/index.html
+++ b/index.html
@@ -589,6 +589,27 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 						-->
 
+
+						
+
+						<section id="four">
+							<div class="container">
+								<h3 style="text-align: center; color:#4acaa8">Contact me</h3>
+								<p style="text-align: center; color: #777;font-weight: 700;">In case you're interested in me to take part of a new project, feel free to contact me and tell me what it's about.</p>
+								<p style="text-align: center;">
+									<span style="text-align: center; color: #4acaa8; ">Email: </span>
+									<a style="text-align: center; padding-left: 1%;" href="alvarogarcia111@gmail.com"> alvarogarcia111@gmail.com </a>
+									<br>
+									<br>
+									<span style="text-align: center; color: #4acaa8;  ">Phone: </span>
+									<a style="text-align: center; padding-left: 1%;" href="tel: 638173875"> 638 17 38 75 </a>
+									<br>
+									<br>
+									<a style=" color: #4acaa8; font-weight: 700;" href="./assets/Curriculum-AlvaroGarciaSierra.pdf" >Download my CV</a>
+								</p>
+							</div>
+						</section>
+
 					</div>
 
 				<!-- Footer -->
